# ComputationalGeometry

./: CMakeLists.txt  Triangulation.cpp  Triangulation.h
Base/: Angle.cpp  Angle.h  Core.h  Distance.cpp  Distance.h  GeoUtils.cpp  GeoUtils.h  Intersection.cpp  Intersection.h  Polygon.cpp  Polygon.h  Vector.cpp  Vector.h
Core/: Angle.h  Distance.h  GeoUtils.cpp  GeoUtils.h  Intersection.cpp  Intersection.h
Core/Base/: Core.h
Core/Primitive/: Line.cpp  Plane.h  Point.h  Polygon.cpp  Polygon.h
Primitive/: Line.h  Plane.h  Point.h  Polygon.cpp  Polygon.h
